# solana-launchpad

./: Anchor.toml  README.md  ecosystem.config.js  hardhat.config.ts  jest.config.js  layerzero.config.ts  li-fi-integration.js  package.json  pnpm-lock.yaml  server.test.ts  server.ts  test-sign-tx.ts
.tmp/: layerzero-config-35aebeff-9c34-416d-829a-19ad8a4d6c71.ts
deploy/: deploy-oft.ts
deployments/arbitrum-sepolia/: MyOFT.json
deployments/bsc-testnet/: MyOFT.json
deployments/optimism-sepolia/: MyOFT.json
deployments/sepolia-testnet/: MyOFT.json
deployments/solana-testnet/: OFT.json
programs/endpoint-mock/src/: lib.rs
programs/fee-collector/: Cargo.toml
programs/fee-collector/src/: lib.rs
programs/oft/src/: lib.rs
src/: li-fi-bridge.ts  server.ts
src/utils/: getEscrowAddress.ts  runCreateOFT.ts  runDeployOFT.ts  runInitConfig.ts  runWire.ts
tasks/: deploy-oft.ts  index.ts
tasks/evm/: deploy.ts  send.ts
tasks/solana/: createOFT.ts  sendOFT.ts
